// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classifiers can specialize multiple other classifiers: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "C",
          "heritage": [
            {
              "$type": "Subclassification",
              "elements": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [],
                      "declaredName": "A",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Subclassification",
              "elements": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`specializations can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Subclassification",
          "declaredName": "Super",
          "elements": [],
          "reference": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "B",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "A",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Subclassification",
          "elements": [
            {
              "$type": "Annotation",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* unnamed */",
              },
              "elements": [],
            },
          ],
          "reference": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "A",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "B",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
